--- a/src/popup.html
+++ b/src/popup.html
@@ -1,16 +1,40 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-      }
-    </style>
-  </head>
-  <body>
-    <button id="changeColor"></button>
-    <script src="popup.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>that's fake</title>
+  <style>
+  body,html{
+    background-color: grey;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;
+  }
+  section{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  section h1{
+    font-size: 15em;
+    margin:0;
+    padding:0;
+  }
+  section p{
+    font-size:1.5em;
+
+  }
+  </style>
+</head>
+<body>
+
+  <section>
+    <h1>   </h1>
+    <p>   </p>
+  </section>
+
+  <script src="script.js"></script>
+</body>
 </html>
