--- a/src - V/popup.html
+++ b/src - V/popup.html
@@ -2,7 +2,6 @@
 <style>
 body{
   min-height: 104px;
-  /* Try a min-height of 120? */
   min-width: 84px;
 }
 .text-center {
@@ -16,7 +15,7 @@ body{
   <hr>
   <script type="text/javascript" src="popup.js"></script>
   <p id="answer" style="text-align:center"></p>
-  <p id="percent" style="text-align:center">100%</p>
-
+  <p id="percentage" style="text-align:center"></p>
+<!-- Remove percentage if not needed; else, set it from the API -->
 </body>
 </html>
