--- a/src - V/popup.html
+++ b/src - V/popup.html
@@ -1,12 +1,17 @@
 <html>
 <style>
   body {
-    min-height: 104px;
-    min-width: 105px;
+    min-height: 300px;
+    min-width: 250px;
   }
 
-  .text-center {
+  .header {
     text-align: center;
+  }
+
+  .button {
+    text-align: center;
+    color: red;
   }
 
   p {
@@ -16,7 +21,11 @@
 </style>
 
 <body>
-  <div class="text-center">
+  <div class="header">
+    <h1>that's fake! 1.0</h1>
+    <h3>detect fake news</h3>
+  </div>
+  <div class="button">
     <button id="button">check current tab</button>
   </div>
   <hr>
