--- a/src - V/popup.html
+++ b/src - V/popup.html
@@ -1,8 +1,8 @@
 <html>
 <style>
   body {
-    min-height: 300px;
-    min-width: 250px;
+    min-height: 280px;
+    min-width: 220px;
   }
 
   .header {
@@ -22,8 +22,8 @@
 
 <body>
   <div class="header">
-    <h1>that's fake! 1.0</h1>
-    <h3>detect fake news</h3>
+    <h1>that's fake! v1.0</h1>
+    <h2>detect fake news</h2>
   </div>
   <div class="button">
     <button id="button">check current tab</button>
