--- a/src - V/popup.html
+++ b/src - V/popup.html
@@ -14,6 +14,14 @@
     color: red;
   }
 
+  footer {
+    bottom: 3;
+    left: 0;
+    position: fixed;
+    right: 0;
+    text-align: center;
+  }
+
   p {
     text-align: center;
     /* font-family: Monaco, "Courier New", monospace; */
@@ -32,6 +40,11 @@
   <script type="text/javascript" src="popup.js"></script>
   <p id="answer"></p>
   <p id="percentage"></p>
+  <footer>
+    <a href="https://github.com/Vishwarrior26/Fake-News-Recognizer">our github</a>
+    <br>
+    <p>Pranav, Saurabh, Sidd, Visruth</p>
+  </footer>
   <!-- Remove percentage if not needed; else, set it from the API -->
 </body>
 
