--- a/popup.html
+++ b/popup.html
@@ -40,12 +40,12 @@
   <div class="button">
     <!-- <button id="button" style = "background-color: #75b0c7;">check current tab</button> -->
     <!-- ^ is lightish teal blue -->
-    <button id="button" style = "background-color: #c4c4c4; border-radius:10px;">check current tab</button>
+    <button id="button" style="background-color: #c4c4c4; border-radius:10px;">check current tab</button>
     <!-- <button id="button" style = "background-color: #5d6a87;">check current tab</button> -->
   </div>
   <br>
   <hr>
-  <script type="text/javascript" src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
   <div class='output'>
     <p id="answer"></p>
     <p id="percentage"></p>
